codex-rs/tui/src/snapshots/codex_tui__app__tests__untracked_thread_notifications_agent_picker.snap
---
source: tui/src/app/tests.rs
assertion_line: 2755
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
  Agents
  Select an agent to watch. ⌥← previous, ⌥→ next.

  Filter by ref, name, role, path, or UUID

› • Main [default]  00000000-0000-0000-0000-000000000123 · idle


  Main [default]
  idle
  UUID: 00000000-0000-0000-0000-000000000123
  Model: gpt-test

  Response: none
  Queued: 0
  Children: 0
  Pending mail: loading

  Enter opens this thread
  ctrl+t inspects transcript · Tab opens controls.
  Tab opens controls
